# stackoverflow-pytest-playwright-screenshots

./: .gitignore  pyproject.toml  requirements.txt  run.bat  run.sh
test/: conftest.py  test_web.py
